--- a/customer/line_up/templates/index.html
+++ b/customer/line_up/templates/index.html
@@ -1,1 +1,7 @@
 {% extends "base.html" %}
+
+{% load static %}
+
+{% block content %}
+<img class="w-full md:w-3/4 m-auto" src="{% static "clip-security.png" %}">
+{% endblock %}
