--- a/customer/line_up/templates/index.html
+++ b/customer/line_up/templates/index.html
@@ -3,5 +3,8 @@
 {% load static %}
 
 {% block content %}
-<img class="w-full md:w-3/4 m-auto" src="{% static "clip-security.png" %}">
+<div class="w-full md:w-3/4 m-auto">
+	<img src="{% static "clip-security.png" %}">
+	<p class="ml-2 text-gray-400 text-sm">https://icons8.com</p>
+</div>
 {% endblock %}
