toast for no customer

--- a/customer/line_up/templates/line_manager.html
+++ b/customer/line_up/templates/line_manager.html
@@ -14,6 +14,7 @@
 {% csrf_token %}
 <div id="toast-error" class="toast min-w-full text-white text-center fixed invisible bg-red-600 py-3 px-5 rounded-sm z-10 top-0">Text failed, try again.</div>
 <div id="toast-success" class="toast min-w-full text-white text-center fixed invisible bg-green-600 py-3 px-5 rounded-sm z-10 top-0">Text sent</div>
+<div id="toast-no-next-customer" class="toast min-w-full text-white text-center fixed invisible bg-black py-3 px-5 rounded-sm z-10 top-0">No customer in line</div>
 <form method="post" id="linemanager-form"></form>
 <div class="flex justify-center">
   <p class="font-bold my-4">
