--- a/customer/line_up/templates/customer_form.html
+++ b/customer/line_up/templates/customer_form.html
@@ -1,5 +1,12 @@
 {% extends "base.html" %}
+
+{% load static %}
 {% load widget_tweaks %}
+
+{% block head_script %}
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key={{ gmaps_api_key }}"></script>
+{% endblock %}
 
 {% block content %}
 <div class="svg flex justify-center items-center">
@@ -14,16 +21,16 @@
         Store:
       </label>
       <label class="text-black">
-        {{ store.name }}, {{store.address }}
+        {{ store.name }}, {{ store.address }}
       </label>
       <br>
       <label class="font-bold text-black" for="inline-phonenumber">
-        Phone Number: 
+        Phone Number:
       </label>
       {% render_field form.phone_number class="w-full md:w-1/2 border-2 border-gray rounded focus:outline-none focus:bg-white focus:border-black leading-10" id="inline-phonenumber" placeholder="555-555-5555" %}
     </div>
-    <div class="flex justify-center">
-      <button class="shadow bg-gray-700 hover:bg-black focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" type="submit" form="lineup-form">
+    <div id="lineup-button-container" class="flex justify-center">
+      <button id="lineup-button" class="shadow bg-gray-700 hover:bg-black focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" type="submit" form="lineup-form">
         Line Up
       </button>
     </div>
@@ -37,5 +44,39 @@
   var extension_field = document.getElementById("inline-phonenumber_1");
   extension_label.style.display = "none"
   extension_field.style.display = "none"
+
+  var button = document.getElementById("lineup-button");
+  var container = document.getElementById("lineup-button-container");
+    
+  if (navigator.geolocation) {
+    navigator.geolocation.getCurrentPosition(getDistance);
+  } else {
+    button.remove()
+    container.innerHTML = "Turn on geolocation to line up.";
+  }
+  
+  function getDistance(position) {
+    var service = new google.maps.DistanceMatrixService();
+    var origin = new google.maps.LatLng(position.coords.latitude, position.coords.longitude);
+    var destination = "{{ store.address }}";
+    console.log(origin)
+    console.log(destination)
+    service.getDistanceMatrix(
+    {
+      origins:[origin],
+      destinations: [destination],
+      travelMode: "WALKING"
+    }, callback);
+  }
+
+  function callback(response, status) {
+    if (status == "OK") {
+      distance = response.rows[0].elements[0].distance.value
+      if (distance > 100) {
+        button.remove()
+        container.innerHTML = "You have to be within 100 meters from the store to line up.";
+      }
+    }
+  }
 </script>
 {% endblock %}
