--- a/customer/line_up/templates/store_list.html
+++ b/customer/line_up/templates/store_list.html
@@ -5,7 +5,7 @@
 <ul class="text-center mx-10 mt-5">
 {% for state in states_list %}
   <li>
-    <div class="font-bold text-xl">{{ state.grouper }}</div>
+    <div class="font-bold text-gray-700 text-xl hover:text-black"><a href="{% url 'stores_in_state' state=state.grouper %}">{{ state.grouper }}</a></div>
     <ul>
       {% for store in state.list %}
         <li class="text-lg">{{ store.name }}</li>
