--- a/customer/line_up/templates/customer_form.html
+++ b/customer/line_up/templates/customer_form.html
@@ -5,7 +5,7 @@
 
 {% block head_script %}
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key={{ gmaps_api_key }}"></script>
+<!-- <script src="https://maps.googleapis.com/maps/api/js?key={{ gmaps_api_key }}"></script>
 <script>
   if (navigator.geolocation) {
     navigator.geolocation.getCurrentPosition(getDistance, handleError);
@@ -37,7 +37,7 @@
       }
     }
   }
-</script>
+</script> -->
 {% endblock %}
 
 {% block content %}
